# cpp-jvm

./: CMakeLists.txt  README.md  main.cpp
common/: debug.h  heapAllocator.cpp  heapAllocator.h  heapString.cpp  heapString.h  heapVector.cpp  heapVector.h  localArray.cpp  localArray.h  type.h
core/: attributeInfo.cpp  bufferedInputStream.h  constantInfo.cpp  frame.cpp  frame.h  heapObject.cpp  heapObject.h  interpreter.cpp  interpreter.h  monitor.cpp  monitor.h  native.cpp  native.h  thread.cpp  thread.h  universe.cpp  universe.h
heap/: accessFlags.cpp  accessFlags.h  class.cpp  class.h  classLoader.cpp  classLoader.h  rtConsts.cpp  rtConsts.h
instructions/: factory.cpp  factory.h
instructions/base/: instruction.cpp  instruction.h
instructions/comparisons/: comparison.cpp  comparison.h
instructions/constants/: constant.cpp  constant.h
instructions/control/: goto.cpp  goto.h  return.cpp  return.h
instructions/conversions/: conversion.cpp  conversion.h
instructions/loads/: load.cpp  load.h
instructions/math/: arithmetic.cpp  arithmetic.h
instructions/monitor/: monitor.cpp  monitor.h
instructions/references/: reference.cpp  reference.h
instructions/stacks/: dup.cpp  dup.h  pop.cpp  pop.h  swap.cpp  swap.h
instructions/stores/: store.cpp  store.h
native/: object.cpp  object.h
parser/: attributeInfo.cpp  attributeInfo.h  bufferedInputStream.cpp  bufferedInputStream.h  byteCodeParser.cpp  byteCodeParser.h  classFile.cpp  classFile.h  constantInfo.cpp  constantInfo.h
test/: test_frame.h
tools/: mathUtil.cpp  mathUtil.h
